# agihouse-ai4healthcare

./: Dockerfile.api  Dockerfile.web  README.md  docker-compose.yml  pyproject.toml
src/api/: main.py
src/apple_health_parser/: __init__.py  parser.py  sleep.py
tests/: test_api.py  test_parser.py  test_sleep.py
tests/fixtures/: sample_data.xml
web/: package.json  pnpm-lock.yaml  postcss.config.mjs  tailwind.config.ts  tsconfig.json  vitest.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/api/chat/: route.ts
web/app/api/records/: route.ts
web/app/api/sleep/: route.ts
web/app/api/vitals/: route.ts
web/components/ui/: alert.tsx  badge.tsx  button.tsx  combobox.tsx  dialog.tsx  field-row.tsx  field.tsx  fieldset.tsx  frame.tsx  input.tsx  label.tsx  scroll-area.tsx  table.tsx  tabs.tsx  types-field.tsx
web/tests/: page.test.tsx
