[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-health-parser"
version = "0.1.0"
description = "A library and API for parsing Apple Health XML exports."
readme = "README.md"
license = { text="MIT" }
requires-python = ">=3.10"
dependencies = [
  "lxml>=5.2",
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov",
    "pytest-xdist>=3",
    "pytest-timeout>=2",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q -ra"